feat(nx.json): add tags
add tag

Closes #1

--- a/nx.json
+++ b/nx.json
@@ -28,7 +28,7 @@
   },
   "projects": {
     "frontend-client": {
-      "tags": ["scope:frontend-client"]
+      "tags": []
     },
     "frontend-client-e2e": {
       "tags": [],
