--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,100 @@
 {
   "version": 1,
   "projects": {
+    "frontend-admin": {
+      "projectType": "application",
+      "root": "apps/frontend/admin",
+      "sourceRoot": "apps/frontend/admin/src",
+      "prefix": "eds1",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "outputs": ["{options.outputPath}"],
+          "options": {
+            "outputPath": "dist/apps/frontend/admin",
+            "index": "apps/frontend/admin/src/index.html",
+            "main": "apps/frontend/admin/src/main.ts",
+            "polyfills": "apps/frontend/admin/src/polyfills.ts",
+            "tsConfig": "apps/frontend/admin/tsconfig.app.json",
+            "inlineStyleLanguage": "scss",
+            "assets": [
+              "apps/frontend/admin/src/favicon.ico",
+              "apps/frontend/admin/src/assets"
+            ],
+            "styles": ["apps/frontend/admin/src/styles.scss"],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "apps/frontend/admin/src/environments/environment.ts",
+                  "with": "apps/frontend/admin/src/environments/environment.prod.ts"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "development": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "configurations": {
+            "production": {
+              "browserTarget": "frontend-admin:build:production"
+            },
+            "development": {
+              "browserTarget": "frontend-admin:build:development",
+              "port": 4201
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "frontend-admin:build"
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "apps/frontend/admin/src/**/*.ts",
+              "apps/frontend/admin/src/**/*.html"
+            ]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/apps/frontend/admin"],
+          "options": {
+            "jestConfig": "apps/frontend/admin/jest.config.js",
+            "passWithNoTests": true
+          }
+        }
+      }
+    },
     "frontend-client": {
       "projectType": "application",
       "root": "apps/frontend/client",
@@ -64,7 +158,8 @@
               "browserTarget": "frontend-client:build:production"
             },
             "development": {
-              "browserTarget": "frontend-client:build:development"
+              "browserTarget": "frontend-client:build:development",
+              "port": 4200
             }
           },
           "defaultConfiguration": "development"
@@ -116,6 +211,32 @@
           "builder": "@nrwl/linter:eslint",
           "options": {
             "lintFilePatterns": ["apps/frontend-client-e2e/**/*.{js,ts}"]
+          }
+        }
+      }
+    },
+    "frontend/admin-e2e": {
+      "root": "apps/frontend/admin-e2e",
+      "sourceRoot": "apps/frontend/admin-e2e/src",
+      "projectType": "application",
+      "architect": {
+        "e2e": {
+          "builder": "@nrwl/cypress:cypress",
+          "options": {
+            "cypressConfig": "apps/frontend/admin-e2e/cypress.json",
+            "tsConfig": "apps/frontend/admin-e2e/tsconfig.e2e.json",
+            "devServerTarget": "frontend-admin:serve:development"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "frontend-admin:serve:production"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": ["apps/frontend/admin-e2e/**/*.{js,ts}"]
           }
         }
       }
