feat(IDE): replaced npm/yarn
replaced npm/yarn

--- a/angular.json
+++ b/angular.json
@@ -243,7 +243,8 @@
     }
   },
   "cli": {
-    "defaultCollection": "@nrwl/angular"
+    "defaultCollection": "@nrwl/angular",
+    "packageManager": "yarn"
   },
   "schematics": {
     "@nrwl/angular": {
